<resources>
    <string name="app_name">Compario</string>
    <string name="welcome">Welcome</string>
    <string name="login">Login</string>
    <string name="username">Username:</string>
    <string name="password">Password:</string>
    <string name="forgot_password">Forgot Password</string>
    <string name="new_user">New User</string>
    <string name="title_activity_login">Sign in</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password (optional)</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="item">Item</string>
    <string name="search">Search</string>
    <string name="home">Home</string>
    <string name="bus">Bus</string>
    <string name="offer">Offer</string>
    <string name="profile">Profile</string>
    <string name="from">From</string>
    <string name="to">To</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="source">Source</string>
    <string name="destination">Destination</string>
    <string name="swap">Swap</string>
    <string name="date">Date</string>
    <string name="date_button">Date Button</string>
    <string name="recent_history">Recent History</string>
    <string name="travelagency">TravelAgency</string>
    <string name="type">Type</string>
    <string name="_1_00_pm">1:00 PM</string>
    <string name="_2_00_pm">2:00 PM</string>
    <string name="price">Price</string>
</resources>
