<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:background="@color/whiteBack"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.compario.compario.HomeFragment">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/white"
        android:orientation="vertical"
        android:layout_margin="15dip"
        android:padding="9dip">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/from"/>

        <AutoCompleteTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/source"
            android:id="@+id/fromA"/>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/to" />

            <ImageButton
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_horizontal"
                android:background="@color/white"
                android:contentDescription="@string/swap"
                android:id="@+id/swapbtn"
                android:src="@drawable/ic_swap_vert_black_24dp" />
        </LinearLayout>
        <AutoCompleteTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/destination"
            android:id="@+id/toB" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/date" />
<LinearLayout
    android:layout_width="wrap_content"
    android:layout_height="wrap_content">
        <EditText
            android:id="@+id/dateInput"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="date"/>
    <ImageButton
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="5dip"
        android:src="@drawable/ic_date_range_black_24dp"
        android:background="@color/white"
        android:id="@+id/datebtn"
        android:contentDescription="@string/date_button" android:layout_marginStart="5dip" />
</LinearLayout>
        <ImageButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/searchbtn"
            android:contentDescription="@string/search"
            android:src="@drawable/ic_search_black_24dp" />
    </LinearLayout>

<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/white"
    android:layout_marginLeft="15dip"
    android:layout_marginRight="15dip">
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/recent_history"/>

</LinearLayout>
</LinearLayout>